@@ -26,6 +26,7 @@
 #include "target.h"
 #include "inferior.h"
 #include "gdb_string.h"
+#include "gdb_stat.h"
 #include "inf-child.h"
 #include "gdb/fileio.h"
 
@@ -33,7 +34,6 @@
 #include <sys/param.h>		/* for MAXPATHLEN */
 #endif
 #include <sys/types.h>
-#include <sys/stat.h>
 #include <fcntl.h>
 #include <unistd.h>
 
